--- a/cicd-demo/buildpack-demo/06-run.yaml
+++ b/cicd-demo/buildpack-demo/06-run.yaml
@@ -8,7 +8,7 @@ spec:
     name: buildpacks-test-pipeline
   params:
     - name: gitUrl
-      value: https://github.com/buildpacks/samples
+      value: https://github.com/kurtburak/k8s-demo
     - name: appSourcePath
       value: 'apps/java-maven'
     - name: appBuilderImage
