--- a/gitops/argocd-app-of-apps.yaml
+++ b/gitops/argocd-app-of-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: http-echo
+  name: argocd-apps
   namespace: argocd
 spec:
   destination:
