--- a/gitops/argocd-apps/http-echo.yaml
+++ b/gitops/argocd-apps/http-echo.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: http-echo
+  namespace: argocd
 spec:
   destination:
     namespace: demo
